fixed spacing between buttons on modal box on run test page

--- a/public/layout/sass/_modal.scss
+++ b/public/layout/sass/_modal.scss
@@ -33,7 +33,7 @@
 		.button:first-child {
 			background: none;
 			color: $fg-grey;
-			padding: 10px 180px 0 0;
+			padding: 10px 160px 0 0;
 
 			&:hover {
 				text-decoration: underline;
